--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-paper": "^4.11.2",
+    "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@react-native-community/eslint-config": "^3.0.1",
+    "babel-plugin-inline-import": "^3.0.0",
     "eslint": "^8.7.0",
     "prettier": "^2.5.1"
   },
